swager bug
